--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <!-- <link rel="stylesheet" href="css/styles.css" media="screen" title="no title"> -->
+    <link rel="stylesheet" href="css/styles.css" media="screen" title="no title">
   <script
 src="https://code.jquery.com/jquery-3.2.1.js"
 integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
@@ -11,6 +11,7 @@ crossorigin="anonymous"></script>
     <title>Calculator</title>
   </head>
   <body>
+    <!--Add-->
     <div class="container">
     <h1>Calculator</h1>
     <form id="add">
@@ -24,6 +25,42 @@ crossorigin="anonymous"></script>
       </div>
       <button type="submit" class="btn">Add!</button>
     </form>
+  <!--Subtract-->
+  <form id="subtract">
+    <div class="form-group">
+      <label for="subtract1">1st number:</label>
+      <input id="subtract1" class="form-control" type="text">
+    </div>
+    <div class="form-group">
+      <label for="subtract2">2nd number:</label>
+      <input id="subtract2" class="form-control" type="text">
+    </div>
+    <button type="submit" class="btn">Subtract!</button>
+  </form>
+  <!--Multiply-->
+  <form id="multiply">
+    <div class="form-group">
+      <label for="multiply1">1st number:</label>
+      <input id="multiply1" class="form-control" type="text">
+    </div>
+    <div class="form-group">
+      <label for="multiply2">2nd number:</label>
+      <input id="multiply2" class="form-control" type="text">
+    </div>
+    <button type="submit" class="btn">Multiply!</button>
+  </form>
+  <!--Divide-->
+  <form id="divide">
+    <div class="form-group">
+      <label for="divide1">1st number:</label>
+      <input id="divide1" class="form-control" type="text">
+    </div>
+    <div class="form-group">
+      <label for="divide2">2nd number:</label>
+      <input id="divide2" class="form-control" type="text">
+    </div>
+    <button type="submit" class="btn">Divide!</button>
+  </form>
     <div id="output">
 
     </div>
